[package]
name = "rosmaster-discovery"
version = "0.1.0"
authors = ["Shane Snover <ssnover95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-util = "0.3"
mdns = "1.1"
tokio = { version = "0.2.20", features = ["macros", "rt-core", "time"]}